fix: long endpoint overflow

--- a/src/components/open-api-page/partials/operation-object/style.module.css
+++ b/src/components/open-api-page/partials/operation-object/style.module.css
@@ -21,6 +21,7 @@
 
 .endpoint {
 	display: block;
+	line-break: normal;
 
 	& .method {
 		color: var(--header-text-color);
